...
        paddingHorizontal={paddingHorizontalGeneral}
        justifyContent="space-between"
      >
        <YStack>
          <FormLabel marginBottom="$2">모험의 이름</FormLabel>
          <Input
            testID="title-input"
            borderColor={titleError ? '$destructiveText' : '$foreground'}
            paddingHorizontal="$4"
            paddingVertical="$3"
            placeholder="예: 2026 남미 여행"
            placeholderTextColor="$placeholderForeground"
            value={newTrip.title}
...
