...
                </Animated.View>
              )}
              showsVerticalScrollIndicator={false}
            />
          )}
          {trips.length > 0 && (
            <FloatingActionButton onPress={handleCreateTrip} noBottomTabBar testID="new-trip-fab">
              <Plane size={44} strokeWidth={1} />
            </FloatingActionButton>
          )}
        </FadeWrapper>
      )}
    </YStack>
...
